minor tweaks: evetns navigation spacing fixed, homepage gallery hover icon animation and font size

--- a/src/app/events/latest/latest.component.html
+++ b/src/app/events/latest/latest.component.html
@@ -2,7 +2,7 @@
     <nav class="breadcrumb" aria-label="breadcrumb">
         <ol>
             <li>
-                <a routerLink="/latest">latest events</a>
+                <a routerLink="/latest">latest events &nbsp;</a>
                 @if (!isLatestRoute()) {
                     <span>/&nbsp; {{ eventDate() }}</span>
                 }
