--- a/src/app/home/homegallery/homegallery.component.html
+++ b/src/app/home/homegallery/homegallery.component.html
@@ -9,14 +9,16 @@
             <img src="../../../assets/mainGallery/img4.jpg" alt="Handwoven Silk Saris">
             <a [routerLink]="['/products']" class="overlay">
                 Handwoven Silk Saris
-                <div class="gallery_image_link">Click to see more<span class="material-symbols-outlined">arrow_right_alt</span></div>
+                <div class="gallery_image_link">Click to see more<span
+                        class="material-symbols-outlined">arrow_right_alt</span></div>
             </a>
         </div>
         <div class="pictures" id="p5">
             <img src="../../../assets/mainGallery/img5.jpg" alt="Organic Incense">
             <a [routerLink]="['/products']" class="overlay">
                 Organic Incense
-                <div class="gallery_image_link">Click to see more<span class="material-symbols-outlined">arrow_right_alt</span></div>
+                <div class="gallery_image_link">Click to see more<span
+                        class="material-symbols-outlined">arrow_right_alt</span></div>
             </a>
         </div>
         <div class="pictures" id="p7">
@@ -183,7 +185,8 @@
             <img src="../../../assets/mainGallery/img3.jpg" alt="Khadi Duree and Rugs">
             <a [routerLink]="['/products']" class="overlay">
                 Khadi Duree and Rugs
-                <div class="gallery_image_link">Click to see more<span class="material-symbols-outlined">arrow_right_alt</span></div>
+                <div class="gallery_image_link">Click to see more<span
+                        class="material-symbols-outlined">arrow_right_alt</span></div>
             </a>
         </div>
     </div>
