minor tweaks: homegallery cards hover effect improved

--- a/src/app/home/homegallery/homegallery.component.css
+++ b/src/app/home/homegallery/homegallery.component.css
@@ -12,7 +12,6 @@
 }
 
 .maingallery {
-    /* margin-top: 1rem; */
     display: grid;
     grid-template-rows: repeat(12, 35rem);
     grid-template-columns: repeat(4, 1fr);
@@ -129,12 +128,13 @@
     padding: 1rem 1.5rem;
     background: rgba(253, 247, 237, 0.6);
     border-radius: 1rem;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 900;
     color: rgb(112, 73, 11);
     text-decoration: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+    height: fit-content;
 }
 
 .overlay:hover {
@@ -145,12 +145,25 @@
 }
 
 .gallery_image_link {
+    visibility: hidden;
     font-size: 1.2rem;
-    font-weight: 500;
-    font-style: italic;
+    font-weight: 700;
     color: inherit;
     margin-top: 0.3rem;
     white-space: nowrap;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: all 0.3s ease;
+    height: 0;
+    overflow: hidden;
+}
+
+.overlay:hover .gallery_image_link {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+    height: auto;
+    margin-top: 0.3rem;
 }
 
 @keyframes moveIcon {
