--- a/src/app/home/homegallery/homegallery.component.html
+++ b/src/app/home/homegallery/homegallery.component.html
@@ -73,7 +73,7 @@
         </div>
         <div class="pictures" id="p12">
             <img src="../../../assets/mainGallery/img12.jpg" alt="">
-            <a [routerLink]="['/production']" class="overlay" style="font-size: 2rem;">
+            <a [routerLink]="['/production']" class="overlay">
                 Tarku Weaving Center
                 <div class="gallery_image_link">
                     Click to see more
