--- a/src/app/pages/contactus/contactus.component.html
+++ b/src/app/pages/contactus/contactus.component.html
@@ -1,56 +1,54 @@
-<section class="contact__container">
-    <div class="contact">
-      <div class="persons">
-        <div class="box">
-          <span>Smt. Chung Chung Bhutia</span>
-          <span>Chairperson</span> <span>Sikkim Khadi &amp; Village Industries Board </span>
-          <span>Contact : 6296542761</span>
-        </div>
-      </div>
+<section class="contact-container">
+  <div class="contact-header">
+    <h1 class="contact-title">Contact Us</h1>
+    <p class="contact-subtitle">Get in touch with our team members</p>
+  </div>
 
-      <div class="persons">
-        <div class="box">
-          <span>Shri Gyurmie Yousal</span>
-          <span>Pr. Chief Executive Officer</span>
-          <span>Contact: 9434080499</span>
+  <div class="loading-spinner" *ngIf="loading">
+    <div class="spinner"></div>
+    <p>Loading contacts...</p>
+  </div>
+
+  <div class="contacts-grid" *ngIf="!loading">
+    <div class="contact-card" *ngFor="let contact of contacts; trackBy: trackByContactId">
+      <div class="card-header">
+        <div class="avatar">
+          <span class="avatar-text">{{ getInitials(contact.name) }}</span>
+        </div>
+        <div class="contact-info">
+          <h3 class="contact-name">{{ contact.name }}</h3>
+          <p class="contact-designation">{{ contact.designation }}</p>
+          <p class="contact-department" *ngIf="contact.department">{{ contact.department }}</p>
+          <p class="contact-specialization" *ngIf="contact.specialization">
+            <span class="specialization-badge">{{ contact.specialization }}</span>
+          </p>
         </div>
       </div>
-      <div class="persons"><div class="box">
-          <span>Smt. Meena Thapa</span>
-          <span>Deputy Executive Officer</span>
-          <span>Contact: 9800366557</span>
-        </div>
-      </div>
-      <div class="persons"><div class="box">
-          <span>Smt. Babita Baraily</span>
-          <span>Assistant Executive Officer</span>
-          <span>Contact: 9434339096</span>
-        </div>
-      </div>
-      <div class="persons"><div class="box">
-          <span>Smt. Dhaka Devi Sharma</span>
-          <span>Accounts Officer</span>
-          <span>Contact: 9647851861</span>
-        </div>
-      </div>
-      <div class="persons"><div class="box">
-          <span>Shri Karma Samten Bhutia</span>
-          <span>PMEGP Related Queries</span>
-          <span>Contact: 9609585504</span>
-        </div>
-      </div>
-      <div class="persons"><div class="box">
-          <span>Shri Gyalpo Tshering Bhutia</span>
-          <span>Bee-Keeping Related Queries</span>
-          <span>Contact: 7407387919</span>
-        </div>
-      </div>
-      <div class="persons"><div class="box">
-          <span>Smt. Babita Baraily</span>
-          <span>Products Related Queries</span>
-          <span>Assistant Executive Officer</span>
-          <span>Contact: 9434339096</span>
-        </div>
+      
+      <div class="card-actions">
+        <button class="contact-btn call-btn" (click)="makeCall(contact.contact)">
+          <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+          </svg>
+          {{ contact.contact }}
+        </button>
+        
+        <button class="contact-btn message-btn" *ngIf="contact.email">
+          <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+            <polyline points="22,6 12,13 2,6"></polyline>
+          </svg>
+          Email
+        </button>
       </div>
     </div>
-  </section>
+  </div>
+
+  <div class="contact-footer">
+    <div class="office-info">
+      <h3>Office Address</h3>
+      <p>Sikkim Khadi & Village Industries Board</p>
+      <p>Government of Sikkim</p>
+    </div>
+  </div>
+</section>
