--- a/src/app/home/portraits/portraits.component.html
+++ b/src/app/home/portraits/portraits.component.html
@@ -3,7 +3,7 @@
     <div class="portrait-image">
       <img src="../../../assets/portraits/cm.png" alt="Chief Minister">
     </div>
-    <h3 class="portrait-name">Shri P.S Tamang (Golay)</h3>
+    <h3 class="portrait-name">Shri P.S. Tamang (Golay)</h3>
     <p class="portrait-title">Honourable Chief Minister of Sikkim</p>
   </div>
 
