--- a/src/app/home/carousel/desk-cl/desk-cl.component.css
+++ b/src/app/home/carousel/desk-cl/desk-cl.component.css
@@ -31,6 +31,10 @@
 /* Title specific positioning */
 .carousel-d h1 {
     bottom: 5rem;
+    font-family: var(--font-subheading);
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h3);
+    line-height: var(--lh-subheading);
 }
 
 /* Tagline specific positioning and styling */
@@ -38,6 +42,10 @@
     font-size: 1.5rem;
     bottom: 1rem;
     left: 1.2rem;
+    font-family: var(--font-body);
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h5);
+    line-height: var(--lh-body);
 }
 
 /* Slide animation and transition styles
