--- a/src/app/pages/contactus/contactus.component.css
+++ b/src/app/pages/contactus/contactus.component.css
@@ -66,7 +66,7 @@
   padding: 3rem;
   box-shadow: 0 0.8rem 2.4rem rgba(127, 83, 13, 0.1);
   transition: all 0.3s ease;
-  border: 0.1rem solid #000080;
+  border: 0.1rem solid var(--primary-bg);
   position: relative;
 }
 
