--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -45,6 +45,11 @@
                         RTI Act
                     </a>
                 </li>
+                <li>
+                    <a [routerLink]="['/privacy-policy']" aria-label="Privacy Policy">
+                        Privacy Policy
+                    </a>
+                </li>
             </ul>
         </nav>
 
@@ -67,9 +72,19 @@
                     <img src="../../../assets/icons/instagram.png" alt="instagram icon">
                 </a>
             </nav>
+            
+            <!-- Additional Links -->
+            <div class="additional-links">
+                <a [routerLink]="['/about-website']" aria-label="About this website">
+                    About this website
+                </a>
+                <a href="https://tejinfomedia.com/" target="_blank" rel="noopener noreferrer" aria-label="Powered by Tejinfomedia (opens in new tab)">
+                    Powered by Tejinfomedia
+                </a>
+            </div>
         </section>
     </footer>
 
     <!-- Copyright notice (outside the grid) -->
-    <div class="copyright">&copy; Sikkim Khadi and Village Industries Board, All rights reserved.</div>
+    <div class="copyright">&copy; 2025 Sikkim Khadi and Village Industries Board, All rights reserved.</div>
 </div>
